--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "vue-search-select": "^2.9.5",
     "vue-select": "^3.16.0",
     "vue-simple-alert": "^1.1.1",
-    "vue-simple-search-dropdown": "^1.0.1"
+    "vue-simple-search-dropdown": "^1.0.1",
+    "vue2-google-maps": "^0.10.7"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
