--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.2",
     "mongoose": "^6.1.8",
+    "node-rest-client": "^3.1.1",
     "nodemon": "^2.0.15"
   }
 }
